<resources>
    <string name="app_name">PRM391x_GoogleMap_anhnlfx00594</string>
    <string name="title_activity_maps">Map</string>

    <!--activity_main xml-->
    <string name="origin_address_edit_text">Enter origin address</string>
    <string name="destination_address_edit_text">Enter destination address</string>
    <string name="find_path_button">Find Path</string>
    <string name="path_distance_init">0 km</string>
    <string name="path_duration_init">0 min</string>

    <!--MapsActivity.java-->
    <string name="origin_address_empty">Origin Address is Empty</string>
    <string name="destination_address_empty">Destination Address is Empty</string>
    <string name="origin_address_failed">Can\'t find origin address</string>
    <string name="destination_address_failed">Can\'t find destination address</string>
    <string name="current_location_failed">Unable to find your location</string>
    <string name="origin_marker">Origin Address</string>
    <string name="destination_marker">Destination Address</string>
    <string name="calculate_direction_failed">Direction calculation failed</string>
</resources>
