<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <EditText
        android:id="@+id/origin_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/origin_address_edit_text"
        android:hint="@string/origin_address_edit_text"
        android:inputType="text"/>

    <EditText
        android:id="@+id/destination_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/destination_address_edit_text"
        android:hint="@string/destination_address_edit_text"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/find_path_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_path_button"/>

        <TextView
            android:id="@+id/path_distance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:drawableStart="@drawable/ic_direction_distance"
            android:drawablePadding="@dimen/drawable_padding"
            android:padding="@dimen/default_padding"
            android:text="@string/path_distance_init"/>

        <TextView
            android:id="@+id/path_duration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:drawableStart="@drawable/ic_direction_duration"
            android:drawablePadding="@dimen/drawable_padding"
            android:padding="@dimen/default_padding"
            android:text="@string/path_duration_init"/>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>